tests/NormalTests/paczka1/small_fuzzy/21447231.err
Error in line 5: TsuuSw S814 88,5
Error in line 11: wJ7H5YV A435 32,9
